--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,25 +1,27 @@
-{% extends "account/base_entrance.html" %}
 {% load i18n allauth account %}
-{% block head_title %}
-    {% trans "Password Reset" %}
-{% endblock head_title %}
 {% block content %}
 <style>
     body {
-        font-family: 'Arial', sans-serif;
+        font-family: Arial, sans-serif;
         background-color: #f4f4f4;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
     }
 
     .container {
-        background-color: #ffffff;
-        padding: 80px 20px;
+        max-width: 400px;
+        padding: 40px;
+        background-color: #fff;
         border-radius: 8px;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
 
     h1 {
         text-align: center;
-        color: #333333;
+        color: #333;
     }
 
     p {
@@ -27,94 +29,73 @@
         margin-top: 10px;
     }
 
-    form {
-        margin-top: 40px;
-    }
-
     .form-group {
-        margin-bottom: 15px;
+        margin-bottom: 20px;
     }
 
     label {
         display: block;
         font-weight: bold;
         margin-bottom: 5px;
-        color: #333333;
+        color: #333;
     }
 
-    input {
-        width: 98%;
-        padding: 8px;
+    input[type="email"] {
+        width: 100%;
+        padding: 10px;
         font-size: 16px;
-        border: 1px solid #cccccc;
+        border: 1px solid #ccc;
         border-radius: 4px;
     }
 
     button {
-        width: 50%;
-        margin-left: 25%;
-        padding: 10px;
+        width: 100%;
+        padding: 12px;
         font-size: 16px;
-        color: #ffffff;
-        background-color: black;
-        border: 1px solid black;
+        color: #fff;
+        background-color: #007bff;
+        border: none;
         border-radius: 4px;
         cursor: pointer;
     }
 
     button:hover {
-        background-color: #0056b3;
-        border-color: #0056b3;
+        background-color: #666666;
     }
 
     .btn-back-home {
-        width: 100%;
+        width: 95%;
         padding: 10px;
         font-size: 16px;
-        border-radius: 4px;
         color: #ffffff;
-        background-color: black;
-        border: 1px solid black;
+        background-color: #0056b3;
+        border: none;
         border-radius: 4px;
         cursor: pointer;
-        margin-top: 10px;
-        margin-right: 10px;
-        text-decoration: none;
-        display: block; 
+        display: block;
         text-align: center;
-        line-height: 40px;
+        text-decoration: none;
+        margin-top: 15px;
+        transition: background-color 0.3s;
     }
 
     .btn-back-home:hover {
-        background-color: #0056b3;
-        border-color: #0056b3;
+        background-color: #666666;
     }
-
-
 </style>
 
-{% element h1 %}
-    {% trans "Password Reset" %}
-{% endelement %}
-{% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-{% endif %}
-<p>
-    {% trans "Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it." %}
-</p>
-{% url 'account_reset_password' as reset_url %}
-{% element form form=form method="post" action=reset_url %}
-    {% slot body %}
+<div class="container">
+    <h1>{% trans "Password Reset" %}</h1>
+    <p>{% trans "Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it." %}</p>
+    <form method="post" action="{% url 'account_reset_password' %}">
         {% csrf_token %}
-        {% element fields form=form %}
-        {% endelement %}
-    {% endslot %}
-    {% slot actions %}
-        {% element button type="submit" %}
-            {% trans 'Reset My Password' %}
-        {% endelement %}
-    {% endslot %}
-{% endelement %}
-<a href="{% url 'home' %}" class="btn btn-back-home">Back to Home Page</a>
-<p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+        <div class="form-group">
+            <label for="id_email">{% trans "Email Address" %}:</label>
+            <input type="email" id="id_email" name="email" required>
+        </div>
+        <button type="submit">{% trans 'Reset My Password' %}</button>
+    </form>
+    <a href="{% url 'home' %}" class="btn btn-back-home">{% trans 'Back to Home Page' %}</a>
+    <p>{% trans "Please contact us if you have any trouble resetting your password." %}</p>
+</div>
 {% endblock content %}
