--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -1,18 +1,65 @@
-{% extends "account/base_entrance.html" %}
 {% load i18n %}
 {% load allauth %}
 {% load account %}
-{% block head_title %}
-    {% trans "Password Reset" %}
-{% endblock head_title %}
 {% block content %}
-    {% element h1 %}
-        {% trans "Password Reset" %}
-    {% endelement %}
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        background-color: #f4f4f4;
+        padding: 20px;
+        margin-top: 10em;
+    }
+
+    .container {
+        max-width: 600px;
+        margin: 0 auto;
+        background-color: #fff;
+        padding: 40px;
+        border-radius: 8px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    h1 {
+        text-align: center;
+        color: #007bff;
+    }
+
+    p {
+        text-align: center;
+        margin-top: 20px;
+        font-size: 16px;
+    }
+
+    .alert {
+        background-color: #f8d7da;
+        border-color: #f5c6cb;
+        color: #721c24;
+        padding: 15px;
+        border-radius: 4px;
+        margin-top: 20px;
+        text-align: center;
+    }
+
+    .alert p {
+        margin: 0;
+    }
+
+    .alert strong {
+        font-weight: bold;
+    }
+</style>
+
+<div class="container">
+    <h1>{% trans "Password Reset" %}</h1>
     {% if user.is_authenticated %}
         {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
-    <p>
-        {% blocktrans %}We have sent you an email. If you have not received it please check your spam folder. Otherwise contact us if you do not receive it in a few minutes.{% endblocktrans %}
-    </p>
+    <div class="alert">
+        <p>
+            {% blocktrans %}
+                We have sent you an email. If you have not received it, please check your spam folder. Otherwise, contact us if you do not receive it in a few minutes.
+            {% endblocktrans %}
+        </p>
+    </div>
+</div>
 {% endblock content %}
