--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -1,12 +1,64 @@
-{% extends "account/base_entrance.html" %}
 {% load i18n %}
 {% load allauth %}
-{% block head_title %}
-    {% trans "Change Password" %}
-{% endblock head_title %}
+
 {% block content %}
-    {% element h1 %}
-        {% trans "Change Password" %}
-    {% endelement %}
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        background-color: #f4f4f4;
+        padding-top: 50px;
+        margin-top: 10em;
+    }
+
+    .container {
+        max-width: 400px;
+        margin: 0 auto;
+        background-color: #fff;
+        padding: 40px;
+        border-radius: 8px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    h1 {
+        text-align: center;
+        color: #007bff;
+        margin-bottom: 20px;
+    }
+
+    p {
+        text-align: center;
+        margin-bottom: 20px;
+        font-size: 16px;
+    }
+
+    a {
+        color: #007bff;
+        text-decoration: none;
+    }
+
+    .btn-back-home {
+        display: block;
+        width: 100%;
+        padding: 12px;
+        font-size: 16px;
+        color: #fff;
+        background-color: #007bff;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        text-decoration: none;
+        text-align: center;
+        margin-top: 20px;
+    }
+
+    .btn-back-home:hover {
+        background-color: #666666;
+    }
+</style>
+
+<div class="container">
+    <h1>{% trans "Change Password" %}</h1>
     <p>{% trans 'Your password is now changed.' %}</p>
+    <a href="{% url 'home' %}" class="btn-back-home">{% trans 'Back to Home Page' %}</a>
+</div>
 {% endblock content %}
