--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -20,6 +20,9 @@
             border-radius: 8px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
             text-align: center;
+            margin: auto;
+            margin-top: 50px;
+    }
         }
 
         h1 {
