--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -17,6 +17,8 @@
         background-color: #fff;
         border-radius: 8px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        margin: auto;
+        margin-top: 50px;
     }
 
     h1 {
