--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -22,6 +22,8 @@
             max-width: 400px;
             width: 100%;
             text-align: center;
+            margin: auto;
+            margin-top: 50px;
         }
         .signup-container h1 {
             margin-bottom: 20px;
