--- a/products/templates/products/delete_review.html
+++ b/products/templates/products/delete_review.html
@@ -13,7 +13,8 @@
                     
                     <form method="POST">
                         {% csrf_token %}
-                        <button type="submit" class="btn btn-danger">Delete</button>
+                        <button type="submit" class="btn btn-danger mr-2">Delete</button>
+                        <a href="{% url 'products:product_detail' product_slug=review.product.slug %}" class="btn btn-secondary">Cancel</a>
                     </form>
                 </div>
             </div>
