--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,8 @@
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
             <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
             <link rel="stylesheet" href="{% static 'css/base.css' %}">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-d3x3uUshw/FZGbVhZzQUn8CvQjO3xzfr+y13oUL2dPHZW3eVpUqVqb9AId9+A/woCyaw+pgDr8YnTdg+fogPGQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
         {% endblock %}
 
         {% block extra_css %}
